tests/ui/parser/unsafe-foreign-mod.stderr
error: extern block cannot be declared unsafe
  --> $DIR/unsafe-foreign-mod.rs:1:1
   |
LL | unsafe extern "C" {
   | ^^^^^^
   |
   = note: see issue #123743 <https://github.com/rust-lang/rust/issues/123743> for more information
   = help: add `#![feature(unsafe_extern_blocks)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

